# Vex

./: .gitignore  LICENSE  README.md  cross.sh  meson.build
.github/workflows/: CI.yml
crossfiles/: arm-linux-gnu.txt  i686-w64-mingw32.txt  mips-linux-gnu.txt  mips64-linux-gnu.txt  powerpc64-linux-gnu.txt
docs/: snippets.md
docs/vex/: function.md  getting-started.md  syntax.md  type-system.md
examples/: example.vex  functions.vex  hello.vex  lambda.vex  variables.vex
src/: ast.c  common.c  error.c  lexer.l  main.c  memory.c  parser.y  tc.c  vex.c
src/ast/: ast.c
src/core/: common.c  memory.c
src/include/: ast.h  color.h  common.h  eval.h  llvm.h  memory.h  repl.h  tc.h
src/llvm/: llvm.c
src/parser/: lexer.l  parser.y  vex.ebnf
src/repl/: eval.c  repl.c
src/typechecker/: tc.c
